[gd_scene load_steps=22 format=3 uid="uid://bohkwkmnjdgbv"]

[ext_resource type="Texture2D" uid="uid://bn58j0u22rx0y" path="res://Assets/Graou/Gold Coin SpriteSheet.png" id="1_71lwh"]
[ext_resource type="Script" path="res://Scripts/coin.gd" id="1_uwp0g"]

[sub_resource type="GDScript" id="GDScript_p2eiq"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_swbx5"]
radius = 7.51665

[sub_resource type="AtlasTexture" id="AtlasTexture_auwgb"]
atlas = ExtResource("1_71lwh")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oukl"]
atlas = ExtResource("1_71lwh")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wcmq"]
atlas = ExtResource("1_71lwh")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8bm6"]
atlas = ExtResource("1_71lwh")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqq3c"]
atlas = ExtResource("1_71lwh")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xk5e"]
atlas = ExtResource("1_71lwh")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgvde"]
atlas = ExtResource("1_71lwh")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaj12"]
atlas = ExtResource("1_71lwh")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_thg5e"]
atlas = ExtResource("1_71lwh")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtutn"]
atlas = ExtResource("1_71lwh")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymbl0"]
atlas = ExtResource("1_71lwh")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2yfb"]
atlas = ExtResource("1_71lwh")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gh5y"]
atlas = ExtResource("1_71lwh")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbm6g"]
atlas = ExtResource("1_71lwh")
region = Rect2(24, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r1yh"]
atlas = ExtResource("1_71lwh")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w155x"]
atlas = ExtResource("1_71lwh")
region = Rect2(72, 72, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_oil5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oukl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wcmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8bm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqq3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xk5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgvde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaj12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thg5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtutn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymbl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2yfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gh5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbm6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r1yh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w155x")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="Coin" type="Node2D"]
z_index = 1
position = Vector2(0, -1)
script = ExtResource("1_uwp0g")

[node name="Area2D" type="Area2D" parent="."]
script = SubResource("GDScript_p2eiq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_swbx5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oil5j")
autoplay = "default"
frame_progress = 0.635099

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, 0.5)
scale = Vector2(0.65, 0.65)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
